// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputDropdown opens the dropdown 1`] = `
<div
  aria-expanded="true"
  aria-haspopup="listbox"
  aria-labelledby="downshift-7-label"
  aria-owns="downshift-7-menu"
  class="css-9pg0wu-input-dropdown denali-input-dropdown"
  data-testid="input-dropdown"
  role="combobox"
>
  <div
    class="css-1avh6g4-input denali-input animated"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="downshift-7-menu"
      aria-labelledby="downshift-7-label"
      autocomplete="off"
      autocorrect="off"
      class="focused"
      data-testid="input-node"
      id="downshift-7-input"
      name="test"
      readonly=""
      spellcheck="false"
      value=""
    />
    <div
      class="input-icon"
    >
      
      <svg
        class="css-124cf9y"
        data-testid="icon"
        height="24px"
        viewBox="0 0 1024 1024"
        width="24px"
      >
        <title>
          arrowhead-up
        </title>
        <path
          d="M512 443.733l-226.133 226.133c-7.461 8.401-18.291 13.668-30.351 13.668-13.957 0-26.267-7.055-33.558-17.793l-0.091-0.142c-5.319-7.276-8.51-16.4-8.51-26.27 0-12.199 4.876-23.259 12.785-31.338l-0.008 0.008 256-253.867c7.434-8.083 18.061-13.13 29.867-13.13s22.432 5.047 29.84 13.101l0.026 0.029 256 253.867c7.901 8.071 12.777 19.131 12.777 31.33 0 9.87-3.192 18.994-8.599 26.397l0.088-0.127c-7.382 10.88-19.691 17.934-33.649 17.934-12.060 0-22.89-5.267-30.315-13.626l-0.036-0.042z"
        />
      </svg>
    </div>
    <div
      class="message"
      data-testid="message"
    />
  </div>
</div>
`;

exports[`InputDropdown renders a filterable dropdown 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-13-label"
  class="css-2fuzhm-input-dropdown denali-input-dropdown"
  data-testid="input-dropdown"
  role="combobox"
>
  <div
    class="css-1avh6g4-input denali-input animated"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-13-label"
      autocomplete="off"
      autocorrect="off"
      data-testid="input-node"
      id="downshift-13-input"
      name="test"
      spellcheck="false"
      value=""
    />
    <div
      class="input-icon"
    >
      
      <svg
        class="css-124cf9y"
        data-testid="icon"
        height="24px"
        viewBox="0 0 1024 1024"
        width="24px"
      >
        <title>
          arrowhead-down
        </title>
        <path
          d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
        />
      </svg>
    </div>
    <div
      class="message"
      data-testid="message"
    />
  </div>
</div>
`;

exports[`InputDropdown renders fluid dropdown 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-1-label"
  class="css-1ri172k-input-dropdown denali-input-dropdown"
  data-testid="input-dropdown"
  role="combobox"
>
  <div
    class="css-1u6oono-input denali-input animated"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-1-label"
      autocomplete="off"
      autocorrect="off"
      data-testid="input-node"
      id="downshift-1-input"
      name="test"
      readonly=""
      spellcheck="false"
      value=""
    />
    <div
      class="input-icon"
    >
      
      <svg
        class="css-124cf9y"
        data-testid="icon"
        height="24px"
        viewBox="0 0 1024 1024"
        width="24px"
      >
        <title>
          arrowhead-down
        </title>
        <path
          d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
        />
      </svg>
    </div>
    <div
      class="message"
      data-testid="message"
    />
  </div>
</div>
`;

exports[`InputDropdown renders initial (closed) state 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  class="css-9pg0wu-input-dropdown denali-input-dropdown"
  data-testid="input-dropdown"
  role="combobox"
>
  <div
    class="css-1avh6g4-input denali-input animated"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-0-label"
      autocomplete="off"
      autocorrect="off"
      data-testid="input-node"
      id="downshift-0-input"
      name="test"
      readonly=""
      spellcheck="false"
      value=""
    />
    <div
      class="input-icon"
    >
      
      <svg
        class="css-124cf9y"
        data-testid="icon"
        height="24px"
        viewBox="0 0 1024 1024"
        width="24px"
      >
        <title>
          arrowhead-down
        </title>
        <path
          d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
        />
      </svg>
    </div>
    <div
      class="message"
      data-testid="message"
    />
  </div>
</div>
`;

exports[`InputDropdown renders searchable input 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-labelledby="downshift-14-label"
  class="css-2fuzhm-input-dropdown denali-input-dropdown"
  data-testid="input-dropdown"
  role="combobox"
>
  <div
    class="css-1avh6g4-input denali-input animated"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-labelledby="downshift-14-label"
      autocomplete="off"
      autocorrect="off"
      data-testid="input-node"
      id="downshift-14-input"
      name="test"
      spellcheck="false"
      value=""
    />
    <div
      class="input-icon"
    >
      
    </div>
    <div
      class="message"
      data-testid="message"
    />
  </div>
</div>
`;
